Thu Aug  6 15:44:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_method_entry_eq): deals with optimized method
	  properly.  [ruby-core:24789]

Thu Aug  6 13:30:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/mkmf/base.rb (TestMkmf): was turned into a class, because
	  MiniUnit doesn't complain even if a testcase has no tests.

Thu Aug  6 13:00:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (check_sizeof): added optional compiler option
	  argument.  [ruby-core:24785]

	* lib/mkmf.rb (create_makefile): suppressed shadowing outer local
	  variable warnings.

Thu Aug  6 12:05:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/testcase.rb (Test::Unit): removes silly TestCase
	  class.

Thu Aug  6 01:37:20 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.[ch]: Update to 1.0 RELEASE which fixes an
	  off-by-one bug in SHA-256 hashing.  Reduce differences from
	  the original while at it. [Bug #1799]

Thu Aug  6 00:09:56 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (IPAddr#hash): Take account of netmask; submitted
	  by Nobuhiro IMAI in [ruby-dev:39011]

Wed Aug  5 19:19:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): assumes -x flag if no "ruby" is in
	  the shebang line.  [ruby-dev:39015]

Wed Aug  5 19:11:01 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ruby.c (rb_stdio_set_default_encoding): declared.

Wed Aug  5 18:46:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.c (ruby_dummy_gdb_enums): made public.  [ruby-dev:39001]

Wed Aug  5 12:54:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
	  [ruby-core:24767]

Wed Aug  5 12:39:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): reset raised flag before fatal error.

Wed Aug  5 10:20:39 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_preprocess_dregexp): add options to arguments.
