@@ -1,3 +1,10 @@
+Thu Aug  6 16:25:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (encoding_data_type): typed data.
+
+	* encoding.c (enc_capable, rb_enc_get_index): Symbol is encoding
+	  capable.
+
 Thu Aug  6 15:44:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_method.c (rb_method_entry_eq): deals with optimized method
